changed design of main page

--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -1,110 +1,27 @@
 
 #kate {
-  width: 13%;
-  min-width: 12%;
-  height:18%;
-  min-height: 22%;
+  width: 100%;
+  min-width: 100%;
+  display: flex;
+  height:1250px;
   position: absolute;
-  top: 100px;
-  right: -200px;
+  top: -200px;
+  right: 0px;
   transition: all 0.3s linear;
-  border: 8px solid #fafafa;
-  border-bottom: 30px solid #fff;
-  -webkit-box-shadow: 3px 3px 3px rgba(116, 95, 90, 0.79);
-  -moz-box-shadow: 0 15px 20px rgba(116, 95, 90, 0.79);
-  box-shadow: 0 15px 20px rgba(116, 95, 90, 0.79);
+  //border: 8px solid #fafafa;
+  //border-bottom: 30px solid #fff;
+  //-webkit-box-shadow: 3px 3px 3px rgba(116, 95, 90, 0.79);
+  //-moz-box-shadow: 0 15px 20px rgba(116, 95, 90, 0.79);
+  //box-shadow: 0 15px 20px rgba(116, 95, 90, 0.79);
 }
-
-.about {
-    right: -1500px;
-    width: 100vh;
-    height: 7.5vh;
-    --offset: 10px;
-    --border-size: 2px;
-    bottom: -63.5vh;
-    display: block;
-    position: relative;
-    padding: 1.5em 3em;
-    appearance: none;
-    border: 0;
-    background: transparent;
-    color: #e55743;
-    text-transform: uppercase;
-    letter-spacing: .25em;
-    outline: none;
-    cursor: pointer;
-    font-weight: bold;
-    border-radius: 0;
-    //box-shadow: inset 0 0 0 var(--border-size) currentcolor;
-    transition: background .8s ease;
-    box-shadow: 0 15px 20px rgba(116, 95, 90, 0.79);
-
-    &:hover {
-        background: rgba(100, 0, 0, .03);
-      box-shadow: 0 15px 20px rgba(116, 95, 90, 0.79);
-    }
-
-    &__horizontal,
-    &__vertical {
-        position: absolute;
-        top: var(--horizontal-offset, 0);
-        right: var(--vertical-offset, 0);
-        bottom: var(--horizontal-offset, 0);
-        left: var(--vertical-offset, 0);
-        transition: transform .8s ease;
-        will-change: transform;
-
-        &::before {
-            content: '';
-            position: absolute;
-            border: inherit;
-        }
-    }
-
-    &__horizontal {
-        --vertical-offset: calc(var(--offset) * -1);
-        border-top: var(--border-size) solid currentcolor;
-        border-bottom: var(--border-size) solid currentcolor;
-
-        &::before {
-            top: calc(var(--vertical-offset) - var(--border-size));
-            bottom: calc(var(--vertical-offset) - var(--border-size));
-            left: calc(var(--vertical-offset) * -1);
-            right: calc(var(--vertical-offset) * -1);
-        }
-    }
-
-    &:hover &__horizontal {
-        transform: scaleX(0);
-    }
-
-    &__vertical {
-        --horizontal-offset: calc(var(--offset) * -1);
-        border-left: var(--border-size) solid currentcolor;
-        border-right: var(--border-size) solid currentcolor;
-
-        &::before {
-            top: calc(var(--horizontal-offset) * -1);
-            bottom: calc(var(--horizontal-offset) * -1);
-            left: calc(var(--horizontal-offset) - var(--border-size));
-            right: calc(var(--horizontal-offset) - var(--border-size));
-        }
-    }
-
-    &:hover &__vertical {
-        transform: scaleY(0);
-    }
-
-}
-
 
 .button {
     left: -200px;
-
+    float: left;
     --offset: 10px;
     --border-size: 2px;
     bottom: 100px;
-    display: block;
+    //display: block;
     position: absolute;
     padding: 1.5em 3em;
     appearance: none;
@@ -179,7 +96,6 @@
 
 .button_cv {
     left: -200px;
-
     --offset: 10px;
     --border-size: 2px;
     bottom: 30vh;
@@ -264,14 +180,11 @@ $color-white: #FFFBFA;
 
 $color-black: #191308;
 .wrapper {
-  display: flex;
+  position: absolute;
+  display: block;
   justify-content: right;
-  //right: -100px;
-  //top: 700px;
-
-  width: 79%;
-  min-width: 79%;
-  height:200%;
+  top: 29%;
+  left: 30%;
   min-height: 600px;
   transition: all .5s ease-out;
 
@@ -354,16 +267,16 @@ $color-black: #191308;
   }
 }
 
-p {
+p{
 	// layout
 	position: absolute;
-	max-width: 30em;
-    width: 50%;
-    right: -44%;
-    top: 60%;
+	max-width: 1200px;
+    width: 20%;
+    right: 10%;
+    top: 55%;
 
 	// looks
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, 0.15);
 	padding: 1.125em 1.5em;
 	font-size: 1.3em;
 	border-radius: 1rem;
@@ -371,27 +284,13 @@ p {
     font-family: 'Montserrat', sans-serif;
 }
 
-p::before {
-	// layout
-	content: '';
-	position: absolute;
-	width: 0;
-	height: 0;
-	bottom: 100%;
-	right: 1.5em; // offset should move with padding of parent
-	border: .75rem solid transparent;
-	border-top: none;
 
-	// looks
-	border-bottom-color: #fff;
-	filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, .1));
-}
 .pin {
   position: absolute;
   top: 48%;
-  right: 32%;
+  right: 27%;
   margin-left: -115px;
-
+  float: right;
   border-radius: 50% 50% 50% 0;
   border: 4px solid #ff0000;
   width: 30px;
@@ -411,22 +310,33 @@ p::before {
   margin-top: -5px;
   background-color: #ff0000;
 }
+
 #location{
   font-family: 'Montserrat', sans-serif;
   position: absolute;
+  min-width: 100%;
   top: 49%;
-  right: 21%;
+  right: -29%;
   font-size: 39px;
 }
 
-body {background:url(https://html5book.ru/wp-content/uploads/2015/10/background54.png) rgb(252, 243, 240)
+body {background:url(https://html5book.ru/wp-content/uploads/2015/10/background54.png) rgb(252, 243, 240);
+  min-width: 100%;
+}
+
+main{
+  min-width: 100%;
 }
 
 #button_contacts {
+  --offset: 10px;
+    --border-size: 2px;
+    appearance: none;
+    border: 0;
   position: absolute;
   right: 3%;
   bottom: 8%;
-  width: 40%;
+  width: 35%;
   height: 20%;
   line-height: 45px;
   border-radius: 45px;
@@ -438,7 +348,7 @@ body {background:url(https://html5book.ru/wp-content/uploads/2015/10/background5
   letter-spacing: 3px;
   font-weight: 600;
   color: #524f4e;
-  background: white;
+  background: rgba(255, 255, 255, 0.59);
   box-shadow: 0 8px 15px rgba(0,0,0,.1);
   transition: .3s;
   border: rgba(15, 22, 43, 0.71);
@@ -461,7 +371,7 @@ body {background:url(https://html5book.ru/wp-content/uploads/2015/10/background5
 
 #phone {
   position: absolute;
-  width: 9%;
+  width: 8%;
   height: 25%;
   right: 80%;
   bottom: 50%;
@@ -469,7 +379,7 @@ body {background:url(https://html5book.ru/wp-content/uploads/2015/10/background5
 
 #mail {
   position: absolute;
-  width: 9%;
+  width: 8%;
   height: 25%;
   right: 80%;
   bottom: 20%;
@@ -477,7 +387,7 @@ body {background:url(https://html5book.ru/wp-content/uploads/2015/10/background5
 
 .phone{
   color: #161f37;
-  display: block;
+  //display: block;
   //position: absolute;
   border-radius: 45px;
   text-transform: lowercase;
