--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -1,6 +1,7 @@
 #resume{
-  width: 83%;
-  height: 83%;
-  //align-items: center;
+  width: 70%;
+  height: 70%;
+  align-items: center;
   display: flex;
+  overflow: hidden;
 }
