--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -2,7 +2,7 @@
   width: 100%;
   min-width: 1201px;
   display: flex;
-  height:100%;
+  //height:100%;
   position: relative;
 }
 
@@ -169,107 +169,7 @@
     }
 }
 
-$color-primary: #81c2de;
-$color-primary-light: #b4f5ff;
-$color-primary-dark: #4f92ac;
 
-$color-white: #FFFBFA;
-
-$color-black: #191308;
-.wrapper {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  left: 300px;
-  top: -1400px;
-  width: 240px;
-  height: 0px;
-  transition: all .4s ease-out;
-
-  &__links {
-    position: absolute;
-    display: block;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    height: 60%;
-    left: -80%;
-  }
-}
-
-.social-link {
-  &--linkedin {
-    color: #2d76b0;
-  }
-
-  &--github {
-    color: #000;
-  }
-
-  &--instagram {
-    color: #9a2970;
-  }
-
-  &--dribbble {
-    color: #b53561;
-  }
-
-  & .social-svg {
-    width: 4.8rem;
-    height: 4.8rem;
-
-    & .social-group {
-
-      &__icon {
-        fill: $color-black;
-        transition: all .2s;
-      }
-
-      &__inner-circle {
-        fill: transparent;
-        transition: all .1s;
-      }
-
-      &__outline {
-        stroke: $color-black;
-        transform-origin: 50% 50%;
-        transition: all .2s;
-      }
-
-  }
-
-  &:hover, &:active, &:focus {
-
-    & .social-group {
-
-      &__icon {
-        fill: $color-white;
-        transition: all .45s;
-      }
-
-      &__inner-circle {
-        fill: currentColor;
-        transition: all .45s;
-
-        &--instagram {
-          fill: url(#simpleInsta) !important;
-        }
-
-      }
-
-      &__outline {
-        stroke: currentColor;
-        transform: scale(1.1);
-        transition: all .45s;
-      }
-
-    }
-
-  }
-
-  }
-}
 
 p{
     width: 20%;
@@ -379,7 +279,6 @@ main{
 }
 .contacts_head{
   position: relative;
-  right: 70px;
   bottom: 130px;
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
@@ -442,3 +341,61 @@ main{
   transform: translateY(-7px);
   border-radius: 1rem;
 }
+
+
+/* Style all font awesome icons */
+.fa {
+  justify-content: space-around;
+  padding: 25px;
+  font-size: 30px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  position: relative;
+  left: -500px;
+  top: -1400px;
+  margin: 5px 2px;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+  padding: 30px;
+  text-align: center;
+  transform: scale(1.1);
+}
+
+/* Set a specific color for each brand */
+
+.fa-linkedin {
+  position: relative;
+  left: -530px;
+  top: -1400px;
+  background: #007bb5;
+  color: white;
+}
+
+.fa-instagram {
+  position: relative;
+  left: -550px;
+  top: -1400px;
+  background: #9a2970;;
+  color: white;
+}
+
+.fa-skype {
+  position: relative;
+  left: -510px;
+  top: -1400px;
+  background: #00aff0;
+  color: white;
+}
+
+.contact_buttons{
+  position: relative;
+  float: right;
+  left: -500px;
+}
+
